--- a/overview.mdx
+++ b/overview.mdx
@@ -3,8 +3,8 @@ title: Overview
 description: 'Autoppia - Deploy AI workers for your daily tasks'
 ---
 
-It has proven outstanding capabilities and a high degree of reasoning. It's a natural step for these capabilities to go beyond text and language and to allow AI systems to actually interact with the world. Many attempts are being developed at the moment, and the term 'agents' is being increasingly used. Everything points out that one of the next big step forward is going to be made in this field.
+**Gen AI is a revolution**. It has proven outstanding capabilities and a high degree of reasoning. It's a natural step for these capabilities to go beyond text and language and to allow AI systems to actually interact with the world. Many attempts are being developed at the moment, and the term 'agents' is being increasingly used. Everything points out that one of the next big step forward is going to be made in this field.
 
 AI is going to change dramatically how people work and interact with software. Legacy software will have to evolve and include more "language oriented" interfaces and will become just interchangeable tools where UI and UX will probably have a lot less importance.  Knowing the intricacies of a software will not be needed anymore. 
 
-Overall, people will be allowed to focus on what really matters delegating automation completely to AI 
+**Overall, people will be allowed to focus on what really matters delegating automation completely to AI**
