--- a/overview.mdx
+++ b/overview.mdx
@@ -8,3 +8,25 @@ description: 'Autoppia - Deploy AI workers for your daily tasks'
 AI is going to change dramatically how people work and interact with software. Legacy software will have to evolve and include more "language oriented" interfaces and will become just interchangeable tools where UI and UX will probably have a lot less importance.  Knowing the intricacies of a software will not be needed anymore. 
 
 **Overall, people will be allowed to focus on what really matters delegating automation completely to AI**
+
+
+## AI Orquestration Layer
+
+The same way that Dashboards, CRMs, ERPs and other automation solutions where easy to use abtractions and interfaces on more complex bussiness processes and data sources, we need to create a higher layer in order to manage all the new AI processes that will be needed to operate a bussiness. 
+
+This solution will become the default interface for interacting with bussiness processes and data. All legacy softwares with enough standarized interfaces (like an API) will serve as tools under the management of AI. 
+
+**Our mission is to provide an 'out of the box' solution to leverage and manage all these new capabilities that Gen AI can provide** while allowing sufficient abstraction and customization to enable users to complete their specific tasks. 
+
+## Solutions
+
+We aim to develop a variety of solutions and applications to widely integrate Generative AI into numerous people's lives and organizations. Our entire ecosystem is centered around the concept of AI Workers.
+
+> If you want to know more about Autoppia [try it out here](https://www.autoppia.com)
+
+<img
+  className="hidden dark:block"
+  src="/images/ecosystem.jpeg"
+  alt="Eco Dark"
+/>
+
