--- a/overview.mdx
+++ b/overview.mdx
@@ -22,7 +22,7 @@ This solution will become the default interface for interacting with bussiness p
 
 We aim to develop a variety of solutions and applications to widely integrate Generative AI into numerous people's lives and organizations. Our entire ecosystem is centered around the concept of AI Workers.
 
-> If you want to know more about Autoppia [try it out here](https://www.autoppia.com)
+<Note>If you want to know more about Autoppia [try it out here](https://www.autoppia.com)</Note>
 
 <img
   className="hidden dark:block"
