updating image for light mode

--- a/overview.mdx
+++ b/overview.mdx
@@ -30,3 +30,9 @@ We aim to develop a variety of solutions and applications to widely integrate Ge
   alt="Eco Dark"
 />
 
+<img
+  className="block dark:hidden"
+  src="/images/ecosystem.jpeg"
+  alt="Eco Light"
+/>
+
