--- a/aiworkers.mdx
+++ b/aiworkers.mdx
@@ -23,6 +23,17 @@ General Purpose Language Models has become an incredible powerfull tool in order
   Tools enable real world interaction and narrow arbitrary tasks into more manageable and contextualizable actions with predictable inputs and outputs. This tools lead to a more deterministic and traditional way of solving things allowing legacy tech to be easily used. This tools will usually require Integrations as the providers of connectivity and configuration. 
 </Card>
 
+<Card title="Memory" icon="memory">
+  Access to past interactions. This will allow for the improvement over time. This is usually implemented by finetunning the LLMs that power the worker but can be also implemented with RAG systems. This will be key for increasing the performace and reliability by introducing RLHF (Human feedback). 
+</Card>
+
+<Card title="Interfaces" icon="sidebar">
+  Although tools are really powerfull they require specific technical development and connectivity that not always is possible. There will be times when to complete a task AI workers will need to use interfaces like computers, mobile devices, browsers, softwares etc to access functionality that otherwise will not be accesible. This approach is significantly more complex as we will be using human interfaces that have been developed specially for AI. 
+</Card>
+
+<Card title="Communications Chanels" icon="headset">
+  AI workers will be able to receive instructions and user's feedback through different channels. Usually in the form of a chat conversation. AI workers can be contacted via standard messaging apps like Whatsapp or Telegram or through a dedicated chat interface inyected on the user browser [Autoppia Browser Extension](). Each channel have different use cases and limitations.
+</Card>
 
 
 
