Documentation edits made through Mintlify web editor

--- a/aiworkers.mdx
+++ b/aiworkers.mdx
@@ -1,11 +1,14 @@
 ---
 title: AI Workers
-description: 'Welcome to the home of your new documentation'
+description: ''
 ---
-
+<br/>
 General Purpose Language Models has become an incredible powerfull tool in order to **solve and automate arbitrary user tasks**. However, they are not enough by their own. In order to build fully working AI sytems that can perform actions in the real world some kind of orquestration has to be done. We called this orquestration of technologies and tools: **AI Workers**. 
 
+<br/>
+
 ## What do AI workers consist of?
+<br/>
 
 <Card title="Language Models" icon="database">
   AI workers are powered by LLMs. This is where they obtain reasoning capabilities and knowledge. Our design is abstract and agnostic meaning that we are not coupled with any solutions or LLM providers. For instance, as long as the model support function tooling, AI workers can be powered by different LLMs like GPT4 or Mixtral. 
