Documentation edits made through Mintlify web editor

--- a/aiworkers.mdx
+++ b/aiworkers.mdx
@@ -49,9 +49,8 @@ General Purpose Language Models has become an incredible powerfull tool in order
 ## Use Case:
 >**Objective**: User wants to register a client in a traditional CRM. 
 
-<br/>
 
-**How could it be done?**
+### How could it be done?
 
 + **Low Level**: By interacting directly with the CRM database where data is stored one can register a new client. Although difficult and complex its possible to reason which tables to update and with which data. 
 
