--- a/products.mdx
+++ b/products.mdx
@@ -35,7 +35,7 @@ Many softwares and applications only provide a human interface so its essential 
 
 <img
   className="hidden dark:block"
-  src="/images/product-virtual-env.png"
+  src="/images/product-virtual-env.jpeg"
   alt="virtual env Dark"
 />
 
