--- a/autoppia-x-bittensor/overview.mdx
+++ b/autoppia-x-bittensor/overview.mdx
@@ -1,4 +1,51 @@
 ---
 title: Overviews
-description: 'Welcome to the home of your new documentation'
+description: ''
 ---
+
+<Note>If you dont know what is Bittensor, please check [this](https://bittensor.com/about) before continuing.</Note>
+
+## Why Bittensor?
+Bittensor's decentralized infrastructure provides a great opportunity to improve and increase Autoppia's AI capabilities. By participating in the Bittensor ecosystem, Autoppia will incorporate subnet services and products, enhancing our platform's functionality and reach. By leveraging bittensor solutions Autoppia will enhance its capabilities and tools, offering more powerful solutions. 
+
+## Bittensor x AI Workers
+Autoppia x Bittensor will allow users to create their own applications (AI workers) while using subnets as commodities , services or tools. This will bring agentic systems into the bittensor community. 
+
+
+These are some of examples of services that are currently being developed on bittensor that could be added to Autoppia: 
+
+<CardGroup cols={3}>
+  <Card title="Language Models" icon="square-1">
+    s1, s18
+    </Card>
+  <Card title="Vision - LLMs" icon="square-2">
+    Image Generation Subnets like s19, s23, s26
+  </Card>
+  <Card title="Storage" icon="square-3">
+    s21
+  </Card>
+  <Card title="Web scraping & data analysis" icon="square-4">
+    s13, s24
+  </Card>
+  <Card title="Agentic Behaviour" icon="square-3">
+    s20
+  </Card>
+  <Card title="LLM protection and moderation" icon="square-4">
+    s14, s32
+  </Card>
+</CardGroup>
+<Card title="Audio" icon="link" >
+  s11, s3 and many more to come (specially with higher subnets limit)
+</Card>
+
+
+This are some of examples of services that are currently being developed on bittensor that could be added to Autoppia: 
+Language Models (s1, s18), 
+Vision - LLMs (Image Generation Subnets like s19, s23, s26), 
+Storage (s21), 
+Web scraping and data analysis (s13, s24), 
+Agentic Behaviour (s20), 
+LLM protection and moderation (s14, s32), 
+Audio (s11, s3) and many more to come (specially with higher subnets limit). 
+
+
