--- a/autoppia-x-bittensor/overview.mdx
+++ b/autoppia-x-bittensor/overview.mdx
@@ -39,6 +39,51 @@ These are some of examples of services that are currently being developed on bit
 </Card>
 
 
+
+This are some of examples of services that are currently being developed on bittensor that could be added to Autoppia: 
+
+<AccordionGroup>
+  <Accordion title="Language">
+    + s1 
+    + s18
+  </Accordion>
+
+  <Accordion title="Vision - LLMs" icon="alien-8bit">
+    Image Generation Subnets like: 
+    + s19
+    + s23
+    + s26
+  </Accordion>
+
+  <Accordion title="Storage">
+    + s21
+  </Accordion>
+
+  <Accordion title="Web scraping & data analysis">
+    + s13
+    + s24
+
+  </Accordion>
+
+  <Accordion title="Agentic Behaviour" icon="alien-8bit">
+    + s20
+  </Accordion>
+
+  <Accordion title="LLM protection & moderation">
+    + s14
+    + s32
+  </Accordion>
+
+   <Accordion title="Audio">
+    + s11
+    + s3 
+    + many more to come (specially with higher subnets limit)
+
+  </Accordion>
+</AccordionGroup>
+
+
+
 This are some of examples of services that are currently being developed on bittensor that could be added to Autoppia: 
 Language Models (s1, s18), 
 Vision - LLMs (Image Generation Subnets like s19, s23, s26), 
