--- a/autoppia-x-bittensor/overview.mdx
+++ b/autoppia-x-bittensor/overview.mdx
@@ -14,67 +14,40 @@ Autoppia x Bittensor will allow users to create their own applications (AI worke
 
 These are some of examples of services that are currently being developed on bittensor that could be added to Autoppia: 
 
-<CardGroup cols={3}>
-  <Card title="Language Models" icon="square-1">
-    s1, s18
-    </Card>
-  <Card title="Vision - LLMs" icon="square-2">
-    Image Generation Subnets like s19, s23, s26
-  </Card>
-  <Card title="Storage" icon="square-3">
-    s21
-  </Card>
-  <Card title="Web scraping & data analysis" icon="square-4">
-    s13, s24
-  </Card>
-  <Card title="Agentic Behaviour" icon="square-3">
-    s20
-  </Card>
-  <Card title="LLM protection and moderation" icon="square-4">
-    s14, s32
-  </Card>
-</CardGroup>
-<Card title="Audio" icon="link" >
-  s11, s3 and many more to come (specially with higher subnets limit)
-</Card>
-
-
-
-This are some of examples of services that are currently being developed on bittensor that could be added to Autoppia: 
 
 <AccordionGroup>
-  <Accordion title="Language">
+  <Accordion title="Language" icon="database">
     + s1 
     + s18
   </Accordion>
 
-  <Accordion title="Vision - LLMs" icon="alien-8bit">
+  <Accordion title="Vision - LLMs" icon="image">
     Image Generation Subnets like: 
     + s19
     + s23
     + s26
   </Accordion>
 
-  <Accordion title="Storage">
+  <Accordion title="Storage" icone="hard-drive">
     + s21
   </Accordion>
 
-  <Accordion title="Web scraping & data analysis">
+  <Accordion title="Web scraping & data analysis" icon="magnifying-glass">
     + s13
     + s24
 
   </Accordion>
 
-  <Accordion title="Agentic Behaviour" icon="alien-8bit">
+  <Accordion title="Agentic Behaviour" icon="user">
     + s20
   </Accordion>
 
-  <Accordion title="LLM protection & moderation">
+  <Accordion title="LLM protection & moderation" icon = "shield">
     + s14
     + s32
   </Accordion>
 
-   <Accordion title="Audio">
+   <Accordion title="Audio" icon = "file-audio">
     + s11
     + s3 
     + many more to come (specially with higher subnets limit)
@@ -84,13 +57,6 @@ This are some of examples of services that are currently being developed on bitt
 
 
 
-This are some of examples of services that are currently being developed on bittensor that could be added to Autoppia: 
-Language Models (s1, s18), 
-Vision - LLMs (Image Generation Subnets like s19, s23, s26), 
-Storage (s21), 
-Web scraping and data analysis (s13, s24), 
-Agentic Behaviour (s20), 
-LLM protection and moderation (s14, s32), 
-Audio (s11, s3) and many more to come (specially with higher subnets limit). 
+
 
 
