overview icon fix

--- a/autoppia-x-bittensor/overview.mdx
+++ b/autoppia-x-bittensor/overview.mdx
@@ -28,7 +28,7 @@ These are some of examples of services that are currently being developed on bit
     + s26
   </Accordion>
 
-  <Accordion title="Storage" icone="hard-drive">
+  <Accordion title="Storage" icon="hard-drive">
     + s21
   </Accordion>
 
