--- a/autoppia-x-bittensor/overview.mdx
+++ b/autoppia-x-bittensor/overview.mdx
@@ -9,7 +9,8 @@ description: ''
 Bittensor's decentralized infrastructure provides a great opportunity to improve and increase Autoppia's AI capabilities. By participating in the Bittensor ecosystem, Autoppia will incorporate subnet services and products, enhancing our platform's functionality and reach. By leveraging bittensor solutions Autoppia will enhance its capabilities and tools, offering more powerful solutions. 
 
 ## Bittensor x AI Workers
-Autoppia x Bittensor will allow users to create their own applications (AI workers) while using subnets as commodities , services or tools. This will bring agentic systems into the bittensor community. 
+
+> Autoppia x Bittensor will allow users to create their own applications (AI workers) while using subnets as commodities , services or tools. This will bring agentic systems into the bittensor community. 
 
 
 These are some of examples of services that are currently being developed on bittensor that could be added to Autoppia: 
