--- a/browser-assistance-subnet/incentive-mechanism.mdx
+++ b/browser-assistance-subnet/incentive-mechanism.mdx
@@ -18,6 +18,8 @@ Workflow Generation. By leveraging AI + Analytic tools or any other method miner
 
 Workflow Validation. Validators will receive this "workflow" and they will have to execute it on a virtual browser and evaluate how accurate the workflow is to give a score to miners. 
 
+<br/>
+
 ```mermaid
 
 flowchart TD
@@ -63,3 +65,10 @@ flowchart TD
 
 
 ```
+
+<br/>
+
+
+<Card title="Request Generation" icon="link" href="/browser-assistance-subnet/request-generation">
+  Lets explore this pipeline more in depth!
+</Card>
