--- a/browser-assistance-subnet/incentive-mechanism.mdx
+++ b/browser-assistance-subnet/incentive-mechanism.mdx
@@ -69,6 +69,6 @@ flowchart TD
 <br/>
 
 
-<Card title="Request Generation" icon="link" href="/browser-assistance-subnet/request-generation">
+<Card title="Request Generation"  href="/browser-assistance-subnet/request-generation">
   Lets explore this pipeline more in depth!
 </Card>
