--- a/browser-assistance-subnet/incentive-mechanism.mdx
+++ b/browser-assistance-subnet/incentive-mechanism.mdx
@@ -3,12 +3,9 @@ title: Incentive Mechanism
 description: 'Welcome to the home of your new documentation'
 ---
 
-## Incentive Mechanism
-
-
 As we mentioned, the purpose of this subnet is to create a Browser Assistant that can operate the browser on behalf of users. To achieve this goal we are going to borrow bittensor miners inteligence to achieve a specific goal: solve user requests and find out what to do. Bittensor will allow us to define a specific "incentive mechanism" that ultimately will lead miners to create a better pipeline for solving arbitrary user requests on a browser context. 
 
-### Subnet Pipeline
+## Subnet Pipeline
 
 This pipeline whole purpose is to successfully solve arbitrary user requests on browser context. To do so we have come up we the following phases:
 
