--- a/browser-assistance-subnet/request-generation.mdx
+++ b/browser-assistance-subnet/request-generation.mdx
@@ -1,11 +1,12 @@
 ---
 title: Request Generation
-description: 'The nature of the problem we are trying to solve is quite unique. User requests are arbitrary and subjective. So there is not a clear "ground truth" associated with each request. This type of problems are solve using feedback (typically human) so that we can train the system to follow that feedback.
-In order to design a good incentive mechanism we should be able to have good and sensible requests for miners to solve and that way allign the subnet with what we want to achieve. But, how to obtain this requests?
-One possible solution could be explore already existing datasets containing human requests and the corresponding solution and try to use it as ground trugh. However this is a really limited approach in order to scale and increase the variety of the websites we explore. Having to do manual work (get human feedback) do not scale well. Also, there will be some problems regarding possible exploits of miners who may know we are generating tasks based on an existing dataset. Miners could easily use that ground truth as well.
-The solution to this '
+description: ''
 ---
 
+The nature of the problem we are trying to solve is quite unique. User requests are arbitrary and subjective. So there is not a clear "ground truth" associated with each request. This type of problems are solve using feedback (typically human) so that we can train the system to follow that feedback.
+In order to design a good incentive mechanism we should be able to have good and sensible requests for miners to solve and that way allign the subnet with what we want to achieve. But, how to obtain this requests?
+One possible solution could be explore already existing datasets containing human requests and the corresponding solution and try to use it as ground trugh. However this is a really limited approach in order to scale and increase the variety of the websites we explore. Having to do manual work (get human feedback) do not scale well. Also, there will be some problems regarding possible exploits of miners who may know we are generating tasks based on an existing dataset. Miners could easily use that ground truth as well.
+The solution to this 
 
 
 ## Organic requests vs synthetic requests
