--- a/products.mdx
+++ b/products.mdx
@@ -5,49 +5,32 @@ description: 'Autoppia Solutions'
 
 ## Autoppia Dashboard
 
-The dashboard allow users to configure AI workers. AI workers need access to external services, credentials, toolkits, LLMs and much more than need to be configured and monitored. This functions as the control center of the whole ecosystem.
-
-<img
-  className="hidden dark:block"
-  src="/images/product-dashboard.png"
-  alt="dash Dark"
-/>
 
 ## Coworker Extension
 
-To allow AI workers read and see your current browser session we have developed Coworker.
 
-Coworker is a browser extension that expand AI workers capabilities even allowing them to operate the browser on your behalf. The main purpose of coworker is increasing productivity and facilitating information flow beteween your workspace and AI proccesses. 
-
-<img
-  className="hidden dark:block"
-  src="/images/product-extension.png"
-  alt="ext Dark"
-/>
 
 ## Virtual Environments
 
-Privacy is really important. There will be times when using your own browser with coworker will not be adecuate. For those times where personal browser is not ideal or when you want to run autonomous workflows we need the AI worker to have access to a cloud virtual browser. 
 
-Many softwares and applications only provide a human interface so its essential to have virtual environments in order to access this interfaces. Knowing how to operate software in this way will unlock many possibilities.
-
-**Cloud virtual browsers are the new generation of RPAs powered by AI**.
-
-<img
-  className="hidden dark:block"
-  src="/images/product-virtual-env.jpeg"
-  alt="virtual env Dark"
-/>
-
-The race build agentic systems that operate browser is quite competitive with some good projects out there trying to make the achievement. In order to outcompete them we wan to leverage Bittensor decentralized markets. 
-
->[Browser Assistance Subnet]()
 
 ## AI Workers through API
 
-Instead of developing your own AI stack or using low level frameworks like Langchain, Autoppia provides an out of the box solution to configure a basic but powerfull AI layer. You can leverage AI workers thoughg API to build your own application and use cases. 
+<CardGroup cols={2}>
+  <Card title="Autoppia Dashboard" icon="chart-line" link="products/autoppia-dashboard">
+    The dashboard allow users to configure AI workers.
+  </Card>
+  <Card title="Coworker Extension" icon="users" link="products/coworker-extension">
+    To allow AI workers read and see your current browser session we have developed Coworker.
+  </Card>
+  <Card title="Virtual Environments" icon="server" link="products/virtual-environments">
+    To allow AI worker to have access to a cloud virtual browser.
+  </Card>
+  <Card title="AI Workers through API" icon="webhook" link="products/ai-worker">
+    leverage AI workers thoughg API to build your own application and use cases.
+  </Card>
+</CardGroup>
 
-This is not an alternative to other LLM providers. Autoppia just provides an orquestration and configuration layer so users can easily add functionality. 
 
-<Note> Autoppia API Comming Soon! </Note>
+
 
