--- a/products.mdx
+++ b/products.mdx
@@ -3,30 +3,19 @@ title: Products
 description: 'Autoppia Solutions'
 ---
 
-## Autoppia Dashboard
 
-
-## Coworker Extension
-
-
-
-## Virtual Environments
-
-
-
-## AI Workers through API
 
 <CardGroup cols={2}>
-  <Card title="Autoppia Dashboard" icon="chart-line" link="products/autoppia-dashboard">
+  <Card title="Autoppia Dashboard" icon="chart-line" href="products/autoppia-dashboard">
     The dashboard allow users to configure AI workers.
   </Card>
-  <Card title="Coworker Extension" icon="users" link="products/coworker-extension">
+  <Card title="Coworker Extension" icon="users" href="products/coworker-extension">
     To allow AI workers read and see your current browser session we have developed Coworker.
   </Card>
-  <Card title="Virtual Environments" icon="server" link="products/virtual-environments">
+  <Card title="Virtual Environments" icon="server" href="products/virtual-environments">
     To allow AI worker to have access to a cloud virtual browser.
   </Card>
-  <Card title="AI Workers through API" icon="webhook" link="products/ai-worker">
+  <Card title="AI Workers through API" icon="webhook" href="products/ai-worker">
     leverage AI workers thoughg API to build your own application and use cases.
   </Card>
 </CardGroup>
