--- a/browser-assistance-subnet/incentive-mechanism.mdx
+++ b/browser-assistance-subnet/incentive-mechanism.mdx
@@ -11,11 +11,18 @@ As we mentioned, the purpose of this subnet is to create a Browser Assistant tha
 
 This pipeline whole purpose is to successfully solve arbitrary user requests on browser context. To do so we have come up we the following phases:
 
-1. User request definition. Which is the user request and which is the browser context associated with that request?. Is 
+<Steps>
+  <Step title="User request definition">
+    Which is the user request and which is the browser context associated with that request?. Is
+  </Step>
+  <Step title="Workflow Generation">
+    By leveraging AI + Analytic tools or any other method miners will have to understand the request and "solve" it. By solving we mean finding the exact secuence of "actions" that when executed they will reach the desire outcome by the user. This solution to the request will be called from now on a "Workflow".
+  </Step>
+  <Step title="Workflow Validation">
+    Validators will receive this "workflow" and they will have to execute it on a virtual browser and evaluate how accurate the workflow is to give a score to miners.
+  </Step>
+</Steps>
 
-2. Workflow Generation. By leveraging AI + Analytic tools or any other method miners will have to understand the request and "solve" it. By solving we mean finding the exact secuence of "actions" that when executed they will reach the desire outcome by the user. This solution to the request will be called from now on a "Workflow". 
-
-3. Workflow Validation. Validators will receive this "workflow" and they will have to execute it on a virtual browser and evaluate how accurate the workflow is to give a score to miners. 
 
 <br/>
 
