--- a/overview.mdx
+++ b/overview.mdx
@@ -7,7 +7,7 @@ description: 'Autoppia - Deploy AI workers for your daily tasks'
 
 AI is going to change dramatically how people work and interact with software. Legacy software will have to evolve and include more "language oriented" interfaces and will become just interchangeable tools where UI and UX will probably have a lot less importance.  Knowing the intricacies of a software will not be needed anymore. 
 
-**Overall, people will be allowed to focus on what really matters delegating automation completely to AI**
+<Tip>**Overall, people will be allowed to focus on what really matters delegating automation completely to AI**</Tip>
 
 
 ## AI Orquestration Layer
