--- a/overview.mdx
+++ b/overview.mdx
@@ -24,15 +24,15 @@ We aim to develop a variety of solutions and applications to widely integrate Ge
 
 <Note>If you want to know more about Autoppia [try it out here](https://www.autoppia.com)</Note>
 
-<img
+<Frame><img
   className="hidden dark:block"
   src="/images/ecosystem.jpeg"
   alt="Eco Dark"
-/>
+/></Frame>
 
-<img
+<Frame><img
   className="block dark:hidden"
   src="/images/ecosystem.jpeg"
   alt="Eco Light"
-/>
+/></Frame>
 
