--- a/browser-assistance-subnet/overview.mdx
+++ b/browser-assistance-subnet/overview.mdx
@@ -31,7 +31,7 @@ Although this subnet is fully independent, by combining it with products like Au
     <Frame caption="Virtual Browser running on the cloud">
         <img
         className="hidden dark:block"
-        src="/images/browser-assistance-subnet2.png"
+        src="/images/browser-assistance-subnet2.jpeg"
         alt="Eco Dark"/>
     </Frame>
 
