--- a/autoppia-x-bittensor/overview.mdx
+++ b/autoppia-x-bittensor/overview.mdx
@@ -1,57 +1,58 @@
 ---
-title: Overviews
+title: Overview
 description: ''
 ---
 
 <Note>If you dont know what is Bittensor, please check [this](https://bittensor.com/about) before continuing.</Note>
 
 ## Why Bittensor?
-Bittensor's decentralized infrastructure provides a great opportunity to improve and increase Autoppia's AI capabilities. By participating in the Bittensor ecosystem, Autoppia will incorporate subnet services and products, enhancing our platform's functionality and reach. By leveraging bittensor solutions Autoppia will enhance its capabilities and tools, offering more powerful solutions. 
+Bittensor's decentralized infrastructure provides a great opportunity to improve and increase Autoppia's AI capabilities. By participating in the Bittensor ecosystem, Autoppia will incorporate subnet services and products, enhancing our platform's functionality and reach. By leveraging bittensor's highly competitive solutions, Autoppia will enhance its capabilities and tools, offering more useful products.
 
 ## Bittensor x AI Workers
 
-> Autoppia x Bittensor will allow users to create their own applications (AI workers) while using subnets as commodities , services or tools. This will bring agentic systems into the bittensor community. 
+> Autoppia x Bittensor will allow users to create their own applications (AI workers) while using subnets as commodities, services or tools. This will bring agentic systems into the bittensor community. 
 
 
-These are some of examples of services that are currently being developed on bittensor that could be added to Autoppia: 
-
+Here are some examples of services that are currently under development on bittensor that could be added to Autoppia:
 
 <AccordionGroup>
   <Accordion title="Language" icon="database">
-    + s1 
-    + s18
+    + Text Prompting
+    + Cortex.t
   </Accordion>
 
   <Accordion title="Vision - LLMs" icon="image">
-    Image Generation Subnets like: 
-    + s19
-    + s23
-    + s26
+    + Vision
+    + NicheImage
+    + Image Alchemy
   </Accordion>
 
   <Accordion title="Storage" icon="hard-drive">
-    + s21
+    + FileTAO
   </Accordion>
 
   <Accordion title="Web scraping & data analysis" icon="magnifying-glass">
-    + s13
-    + s24
+    + Data Universe
+    + Omega
 
   </Accordion>
 
   <Accordion title="Agentic Behaviour" icon="user">
-    + s20
+    + Bit Agent
   </Accordion>
 
   <Accordion title="LLM protection & moderation" icon = "shield">
-    + s14
-    + s32
+    + LLM Defender
+    + Its-AI
   </Accordion>
 
    <Accordion title="Audio" icon = "file-audio">
-    + s11
-    + s3 
-    + many more to come (specially with higher subnets limit)
+    + Dippy
+    + MyShell 
+  </Accordion>
+
+   <Accordion title="More to come" icon = "file-audio">
+    + specially with higher subnets limit
 
   </Accordion>
 </AccordionGroup>
