--- a/browser-assistance-subnet/browser-assistance-subnet.mdx
+++ b/browser-assistance-subnet/browser-assistance-subnet.mdx
@@ -6,8 +6,7 @@ description: 'Operate Browser on behalf of users'
 
 With the intention to fully dive into Bittensor ecosystem and to increase Autoppia´s capabilities we aim to deploy our own subnet. This subnet will be dedicated to build a Browser Assistant that effectively solve user requests by operating the browser on behalf of the user. 
 
-Although this subnet is fully independent, by combining it with products like Autoppia AI workers and Coworker (Browser Extension) is how we really achieve an amazing end product for users. 
-
+Although this subnet is fully independent, by combining it with products like Autoppia AI workers and Coworker (Browser Extension) we will manage to create an amazing end product for users.” This high quality product will lead to monetization, which will bring higher subnet emissions as well as more competition to the subnet and therefore make a product with higher quality.
 
 
 
@@ -40,7 +39,7 @@ Although this subnet is fully independent, by combining it with products like Au
   <Accordion title="Privacy on Bittensor">
     This subnet suffer similar challenges and problems to other subnets where organic traffic may contain private and sensitive information. For example, subnet 18 process LLM prompts made by users. In this subnet we deal with user requests and with user browser contexts so privacy become key. 
 
-    The conclusion to this privacy dilema on bittensor is that there is no easy way to have decentralized systems and privacy simultaneously. Therefore, users must know this when using subnet directly. However, there is an easy work around to this problem and is to train models in order to replicate the subnet behaviour "offline". We can consider the subnet as a really powerfull data generator about how to operate a browser given a specific request. Training an opersource LLM (LLama3 for example) and running it offline is a really valid and reasonably good solution to run privacy preserving use cases. 
+    The conclusion to this privacy dilema on bittensor is that there is no easy way to have decentralized systems and privacy simultaneously. Therefore, users must know this when using subnet directly. However, there is an easy work around to this problem and is to train models in order to replicate the subnet behaviour "offline". We can consider the subnet as a really powerfull data generator about how to operate a browser given a specific request. Training an opersource (LLama3 for example) and running it offline is a really valid and reasonably good solution to run privacy preserving use cases. 
 
     This "offline" approach can be even a good ideas in order to meet extremely 
 
