--- a/browser-assistance-subnet/incentive-mechanism.mdx
+++ b/browser-assistance-subnet/incentive-mechanism.mdx
@@ -5,7 +5,7 @@ description: ''
 
 ## Incentive Mechanism
 
-As we mentioned, the purpose of this subnet is to create a Browser Assistant that can operate the browser on behalf of users. To achieve this goal we are going to borrow bittensor miners inteligence to achieve a specific goal: solve user requests and find out what to do. Bittensor will allow us to define a specific "incentive mechanism" that ultimately will lead miners to create a better pipeline for solving arbitrary user requests on a browser context. 
+As we mentioned, the purpose of this subnet is to create a Browser Assistant that can operate the browser on behalf of users. To achieve this goal we are going to borrow bittensor miners inteligence to achieve a specific goal: solve user requests and find out what tasks and sub-tasks are necessary and how to execute them. Bittensor will allow us to define a specific "incentive mechanism" that ultimately will lead miners to create a better pipeline for solving arbitrary user requests on a browser context. 
 
 ## Subnet Pipeline
 
