--- a/browser-assistance-subnet/request-generation.mdx
+++ b/browser-assistance-subnet/request-generation.mdx
@@ -3,10 +3,8 @@ title: Request Generation
 description: ''
 ---
 
-The nature of the problem we are trying to solve is quite unique. User requests are arbitrary and subjective. So there is not a clear "ground truth" associated with each request. This type of problems are solve using feedback (typically human) so that we can train the system to follow that feedback.
-In order to design a good incentive mechanism we should be able to have good and sensible requests for miners to solve and that way allign the subnet with what we want to achieve. But, how to obtain this requests?
-One possible solution could be explore already existing datasets containing human requests and the corresponding solution and try to use it as ground trugh. However this is a really limited approach in order to scale and increase the variety of the websites we explore. Having to do manual work (get human feedback) do not scale well. Also, there will be some problems regarding possible exploits of miners who may know we are generating tasks based on an existing dataset. Miners could easily use that ground truth as well.
-The solution to this 
+The nature of the problem we are trying to solve is quite unique. User requests are arbitrary and subjective. So there is not a clear “ground truth” associated with each request. This type of problems are solved using feedback (typically human) so that we can train the system to follow that feedback. In order to design a good incentive mechanism we should be able to have good and sensible requests for miners to solve and that way allign the subnet with what we want to achieve. But, how to obtain this requests? One possible solution could be exploring already existing datasets containing human requests and the corresponding solution and try to use it as ground. However, this is a really limited approach in order to scale and increase the variety of the websites we explore. Having to do manual work (get human feedback) does not scale well.
+Also, there will be some problems regarding possible exploits of miners who may know we are generating tasks based on an existing dataset. Miners could easily use that ground truth as well.
 
 
 ## Organic requests vs synthetic requests
@@ -20,10 +18,9 @@ In the absence of organic promts there is the possibility to create synthetic pr
 ## Organic User Requests (Future release)
 This correspond to real requests from users. This requests will be introduced on the autoppia browser extension chat and will be sent to Autoppia Validator. The Validator will then perform the standard pipeline. Eventually, the validator will send the workflow to the user to be executed there. 
 
-In order for this to work, the users browser state has to be in one way or another accessed by miners and validators. Privacy is a fundamental problem in both Bittensor as a whole and in our subnet. This problem has arised now but will continue to arise as privacy is a frecuent requirement in real world applications. And if bittensor wants to really compete with propietary solutions out there, we must find a solution. 
+In order for this to work, the users browser state has to be in one way or another accessed by miners and validators. Privacy is a fundamental problem in both Bittensor as a whole and in our subnet. This problem has arised now but will continue to arise as privacy is a frequent requirement in real world applications. And if bittensor wants to really compete with propietary solutions out there, we must find a solution. 
 
-A possible solution is to apply measures like using a complete independent browser session and to use an AI filtering layer to find sensible data on the user context and to remove it or change it for placeholders. Although this can make some use cases impossible (like direclty asking for a password value shown on screen for example) most of use cases can be abstracted from the specific values of certain variables.
+The approach to solve this issue is applying measures like using An independent browser session and using an AI filtering layer to find sensible data on the user context and removing it or change it to placeholders. Although this can make some use cases impossible (like directly asking for a password value shown on screen for example) most of use cases can be abstracted from the specific values of certain variables.
 
-The main problem of this approach is that its not 100% effective as detecting sensible data will have some type of error rate. This rise a question about 
 
 <Note>If you want to check how do we create sythetic prompts we should</Note>
