--- a/browser-assistance-subnet/workflow-generation.mdx
+++ b/browser-assistance-subnet/workflow-generation.mdx
@@ -4,19 +4,19 @@ description: ''
 ---
 
 ## Workflow Generation
-Workflow Generation is Miners duty! This mean miners will have to solve the request they receive together with the browser context associated with that request. We will provide a default Workflow Solution but this will only serve as guideline towards solving more complex workflows. 
+Workflow Generation is Miner’s duty! This means miners will have to solve the request they receive together with the browser context associated with that request. We will provide a default Workflow Solution, but this will only serve as a guideline towards solving more complex workflows.
 
 <Note>Miners will have to design their own workflow generation approach to successfully outcompete the rest of miners.</Note>
 
 ## Task Definition
-Miner will receive a user request in an specific browser context. The browser context consist of the HTML in the moment of the request, the url, and a screenshot of the screen. User requests are arbitrariliy complex so miners will have to found the way to solve that request by executing "actions" in the browser. This secuence of actions is what we call a "Workflow". 
+Miner will receive a user request in a specific browser context. The browser context consists of the HTML in the moment of the request, the url, and a screenshot. User requests are arbitrarily complex so miners will have to find the way to solve that request by executing “actions” in the browser. This sequence of actions is what we call a “Workflow”.
 
-## What is Workflow?
-Workflows are secuence of actions (steps) that when executed they lead to the completion of the user task. This simplification allow us to decompose complex tasks into smaller ones. This fits perfectly with the limited nature of Gen AI in terms of tokens and of reasoning.  Also, this allow us to track and observe where errors occur as we have make the problem discrete.
+## What defines a Workflow?
+Workflows are a sequence of actions (steps) that, when executed, they lead to the completion of the user task. This simplification allows us to decompose complex tasks into smaller ones. This fits perfectly with the limited nature of Gen AI in terms of tokens and of reasoning. Also, this allows us to track and observe where errors occur as we have made the problem discrete.
 
-When decomposing a task into smaller tasks what we are doing is to reduce the complexity but in a "languaje" oriented manner. Meaning that till this point is all "descriptions" of what have to be done. However, we need to actually create some kind of standarization that helps us to translate those descriptive steps into more specific actions that can be executed on a Browser environment. 
+When decomposing a task into smaller tasks what we are doing is reducing the complexity but in a “language” oriented manner. Meaning that until this point everything is “descriptions” of what needs to be done. However, we need to actually create some kind of standardization that helps us to translate those descriptive steps into more specific actions that can be executed on a Browser environment.
 
-To do this, we have create a list of possible actions that will try to represent most of typical actions that users do on a browser context. This actions allow us to reduce the complexity considerably and to have a more narrow objective: find a secuence of actions that resembles the "intention" of a specific workflow step. All this methods and techniques are not so different than what we humans do in our daily lives to solve problems (Obviolsy in a different scale and complexit).
+To do this, we have created a list of possible actions that will try to represent most of typical actions that users do on a browser context. These actions allow us to considerably reduce complexity and to have a narrower objective: find a sequence of actions that resembles the “intention” of a specific workflow step. All these methods and techniques are not so different than what we humans do in our daily lives to solve problems (Obviously in a different scale and complexity).
 
 ## Examples of actions
 
