Documentation edits made through Mintlify web editor

--- a/browser-assistance-subnet/incentive-mechanism.mdx
+++ b/browser-assistance-subnet/incentive-mechanism.mdx
@@ -40,7 +40,7 @@ flowchart TD
     E((User Browser))
     F{"WorkFlow Execution"}
     X(("Human Feedback"))
-    Y(("Validator"))
+    Y{"Validator"}
     I(("Virtual Browser"))
     W(("Synthetic Feedback"))
     V("Bittensor")
