--- a/overview.mdx
+++ b/overview.mdx
@@ -22,6 +22,24 @@ This solution will become the default interface for interacting with bussiness p
 
 We aim to develop a variety of solutions and applications to widely integrate Generative AI into numerous people's lives and organizations. Our entire ecosystem is centered around the concept of AI Workers.
 
+
+<CardGroup cols={4}>
+  <Card title="AI Worker" icon="square-1" href="/products/ai-worker">
+    Configure a basic but powerfull AI layer
+  </Card>
+  <Card title="Second Card" icon="square-2">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+  </Card>
+  <Card title="Third Card" icon="square-3">
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+  </Card>
+  <Card title="Fourth Card" icon="square-4">
+    Excepteur sint occaecat cupidatat non proident
+  </Card>
+</CardGroup>
+
+
+
 <Note>If you want to know more about Autoppia [try it out here](https://www.autoppia.com)</Note>
 
 <Frame><img
