--- a/overview.mdx
+++ b/overview.mdx
@@ -24,8 +24,8 @@ We aim to develop a variety of solutions and applications to widely integrate Ge
 
 
 <CardGroup cols={4}>
-  <Card title="AI Worker" icon="square-1" href="/products/ai-worker">
-    Configure a basic but powerfull AI layer
+  <Card icon="square-1" href="/products/ai-worker">
+    AI Worker
   </Card>
   <Card title="Second Card" icon="square-2">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit
