--- a/overview.mdx
+++ b/overview.mdx
@@ -27,6 +27,15 @@ We aim to develop a variety of solutions and applications to widely integrate Ge
   <Card icon="square-1" href="/products/ai-worker">
     AI Worker
   </Card>
+   <Card icon="square-1" href="/products/ai-worker">
+    AI Worker
+  </Card>
+   <Card icon="square-1" href="/products/ai-worker">
+    AI Worker
+  </Card>
+   <Card icon="square-1" href="/products/ai-worker">
+    AI Worker
+  </Card>
  
 </CardGroup>
 
