--- a/overview.mdx
+++ b/overview.mdx
@@ -24,7 +24,7 @@ We aim to develop a variety of solutions and applications to widely integrate Ge
 
 
 <CardGroup cols={4}>
-  <Card icon="square-1" href="/products/ai-worker">
+  <Card icon="head-side-gear" href="/products/ai-worker">
     AI Worker
   </Card>
    <Card icon="square-1" href="/products/ai-worker">
