--- a/overview.mdx
+++ b/overview.mdx
@@ -27,10 +27,10 @@ We aim to develop a variety of solutions and applications to widely integrate Ge
   <Card icon="head-side-gear" href="/products/ai-worker">
     AI Worker
   </Card>
-   <Card icon="chat-pie" href="/products/autoppia-dashboard">
+   <Card icon="chart-pie" href="/products/autoppia-dashboard">
     Dashboard
   </Card>
-   <Card icon="square-1" href="/products/coworker-extension">
+   <Card icon="hand-holding-hand" type="duotone" href="/products/coworker-extension">
     Co-Worker
   </Card>
    <Card icon="square-1" href="/products/virtual-environment">
