--- a/overview.mdx
+++ b/overview.mdx
@@ -23,17 +23,17 @@ This solution will become the default interface for interacting with bussiness p
 We aim to develop a variety of solutions and applications to widely integrate Generative AI into numerous people's lives and organizations. Our entire ecosystem is centered around the concept of AI Workers.
 
 
-<CardGroup cols={4}>
+<CardGroup cols={3}>
   <Card icon="head-side-gear" href="/products/ai-worker">
     AI Worker
   </Card>
    <Card icon="chart-pie" href="/products/autoppia-dashboard">
     Dashboard
   </Card>
-   <Card icon="hand-holding-hand" type="duotone" href="/products/coworker-extension">
+   <Card icon="hand-holding-hand" type="duotone, solid" href="/products/coworker-extension">
     Co-Worker
   </Card>
-   <Card icon="square-1" href="/products/virtual-environment">
+   <Card icon="cloud" href="/products/virtual-environment">
     Virtual Envirnment
   </Card>
  
