--- a/overview.mdx
+++ b/overview.mdx
@@ -36,7 +36,23 @@ We aim to develop a variety of solutions and applications to widely integrate Ge
    <Card icon="cloud" href="/products/virtual-environment">
     Virtual Envirnment
   </Card>
- 
+
+  <Card icon="head-side-gear" href="/browser-assistance-subnet/incentive-mechanism">
+    Incentive Mechanism
+  </Card>
+   <Card icon="chart-pie" href="/browser-assistance-subnet/overview">
+    Subnet
+  </Card>
+   <Card icon="hand-holding-hand" type="duotone, solid" href="/browser-assistance-subnet/request-generation">
+    Request Generation
+  </Card>
+   <Card icon="cloud" href="/browser-assistance-subnet/workflow-evaluation">
+    Workflow Evalutation
+  </Card>
+  <Card icon="cloud" href="/browser-assistance-subnet/workflow-generation">
+    Workflow Generation
+  </Card>
+
 </CardGroup>
 
 
