--- a/overview.mdx
+++ b/overview.mdx
@@ -37,19 +37,19 @@ We aim to develop a variety of solutions and applications to widely integrate Ge
     Virtual Envirnment
   </Card>
 
-  <Card icon="head-side-gear" href="/browser-assistance-subnet/incentive-mechanism">
+  <Card icon="microchip-ai" href="/browser-assistance-subnet/incentive-mechanism">
     Incentive Mechanism
   </Card>
-   <Card icon="chart-pie" href="/browser-assistance-subnet/overview">
+   <Card icon="network-wired" href="/browser-assistance-subnet/overview">
     Subnet
   </Card>
-   <Card icon="hand-holding-hand" type="duotone, solid" href="/browser-assistance-subnet/request-generation">
+   <Card icon="code-pull-request" type="duotone, solid" href="/browser-assistance-subnet/request-generation">
     Request Generation
   </Card>
-   <Card icon="cloud" href="/browser-assistance-subnet/workflow-evaluation">
+   <Card icon="arrow-progess" href="/browser-assistance-subnet/workflow-evaluation">
     Workflow Evalutation
   </Card>
-  <Card icon="cloud" href="/browser-assistance-subnet/workflow-generation">
+  <Card icon="check-double" href="/browser-assistance-subnet/workflow-generation">
     Workflow Generation
   </Card>
 
