--- a/overview.mdx
+++ b/overview.mdx
@@ -46,7 +46,7 @@ We aim to develop a variety of solutions and applications to widely integrate Ge
    <Card icon="code-pull-request" type="duotone, solid" href="/browser-assistance-subnet/request-generation">
     Request Generation
   </Card>
-   <Card icon="arrow-progess" href="/browser-assistance-subnet/workflow-evaluation">
+   <Card icon="arrow-progress" href="/browser-assistance-subnet/workflow-evaluation">
     Workflow Evalutation
   </Card>
   <Card icon="check-double" href="/browser-assistance-subnet/workflow-generation">
